fix header spacing on homepage when featured slider is hidden

--- a/scrappply.less
+++ b/scrappply.less
@@ -151,7 +151,7 @@ body ul.nav { // Styles applied to all instances of navigation
   }
 }
 
-body.has-slider, body.has-top-section {
+body.has-slider, body.home, body.has-top-section {
   header#header {
     padding-top: 3em; // down from the default 3.631em, which looks unbalanced with our logo
     #logo {
